[gd_scene load_steps=6 format=3 uid="uid://qjul30hhfbyk"]

[ext_resource type="Script" path="res://project/terrain/TerrainManager.gd" id="1_c00og"]
[ext_resource type="Script" path="res://project/terrain/SeedNode.gd" id="2_hk8t7"]
[ext_resource type="Script" path="res://project/network/networkManager.gd" id="4_4e5t6"]
[ext_resource type="PackedScene" uid="uid://dvo6agmpd78u7" path="res://project/camera/cameraController.tscn" id="14_idsun"]
[ext_resource type="Script" path="res://project/camera/player.gd" id="15_nngca"]

[node name="main" type="Node3D"]

[node name="World" type="Node3D" parent="."]

[node name="TerrainManager" type="Node3D" parent="World"]
script = ExtResource("1_c00og")

[node name="SeedNode" type="Node3D" parent="World/TerrainManager"]
script = ExtResource("2_hk8t7")

[node name="CSGBox3D" type="CSGBox3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.204346, 0.185608, -6.68032)
size = Vector3(6.19775, 1.37122, 1)

[node name="CameraController" parent="." groups=["CameraController"] instance=ExtResource("14_idsun")]
script = ExtResource("15_nngca")
speed = 1

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("4_4e5t6")
